test/scc/expr/semantic-errors/107.t
void foo(int a, int b)
{
    
}

void test()
{
    foo(10, 20, 30);
}